explicitly enable native access during tests
this fixes a warning indicating that this might become necessary in future JDK versions

[ci skip]